# mclarens-app-server

./: .editorconfig  .flake8  .gitignore  Dockerfile  README.md  logging.dev.ini  pyproject.toml  start.sh
reportgen/: report_maker.py
reportserver/: __init__.py  __main__.py  app.py  config.py  models.py  utils.py
reportserver/db/: __init__.py  config.py  db.py  engine.py  session.py  utils.py
reportserver/reportgen/: config.py  report_export.py  utils.py
reportserver/resources/: app_session.py  models.py  register_db_models.py  router.py
reportserver/resources/report/: __init__.py  models.py  router.py  services.py  views.py
reportserver/resources/task/: __init__.py  models.py  router.py  services.py  views.py
reportserver/resources/task/models/: __init__.py  data_models.py  db_models.py
reportserver/resources/utility/: __init__.py  models.py  router.py  views.py
reportserver/resources/ws/: router.py  views.py
reporttask/: celery_app.py  config.py  tasks.py
templates/: default_mclarens_report_template.j2.html  final_report_test.html
templates/components/: report_base.j2.html
test/server/: mock_db.py
tests/server/model/: test_report.py
