[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mclarens-server"
version = "0.1.10"
description = ""
authors = ["Narayan Bandodker <narayan.b@phaidelta.com>"]
readme = "README.md"
packages = [
    {include = "reportserver"},
    {include = "reporttask"}
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.105.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"
jinja2 = "^3.1.2"
appdirs = "^1.4.4"
python-multipart = "^0.0.6"
sse-starlette = "^1.8.2"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.24.0.post1"
isort = "^5.13.2"
black = "^23.12.0"
flake8 = "^6.1.0"


[tool.poetry.group.weasyprint.dependencies]
weasyprint = "^60.2"


[tool.poetry.group.pandoc.dependencies]
pypandoc = "^1.12"

[project.scripts]
mclarens-server = "reportserver:serve"
